(KainX)

E-Xss, an xscreensaver epplet.  Unfortunately, xscreensaver crashes my X
server on a regular basis, so I'll have to continue development for this at
home.  It currently has...issues.

-------------------------------------------------------------------------------

Sat Nov  6 12:03:16 PST 1999
(KainX)

Well, it seems to work pretty well at this point.  Now I just need to figure
out how to support multiple hacks (which is what those previous/next buttons
are for).

-------------------------------------------------------------------------------

Mon Nov  8 14:05:56 PST 1999
(KainX)

Multiple hacks are now supported in E-Xss.  Just edit your config file and
list as many hacks as you want.  The key values are "hack_0", "hack_1", etc.,
on up to however many hacks you want.

-------------------------------------------------------------------------------

Mon Nov  8 20:32:49 PST 1999
(KainX)

Raised the delay for qix (oops) and redid the date format in E-Time.  It now
shows the full weekday name and shows the day before the month.  I also added
a space for improved readability.

-------------------------------------------------------------------------------

Tue Nov  9 23:31:01 GMT 1999
(gilbertt)

Added some more goofy text to the banner cloak-animation, tidied up some
bits and bobs... I forget what else ;-)

-------------------------------------------------------------------------------

Wed Nov 10 19:13:17 GMT 1999
(gilbertt)

Added E-Mixer. Probably b0rked the configure.in and Makefile.am, but it
compiles on my box (tm).

-------------------------------------------------------------------------------

Wed Nov 10 19:48:22 GMT 1999
(gilbertt)

Added E-SD. I don't think I screwed anything up in the process.

-------------------------------------------------------------------------------

Wed Nov 10 14:54:28 PST 1999
(Mandrake)

removed EppletTest and EppletConfigTest from install procedure.  no need for
those to be automagically installed.